@@ -1,3 +1,9 @@
+2007-02-06  Jesse van den Kieboom  <jesse@icecrew.nl>
+
+	* plugins/filebrowser/gedit-file-bookmarks-store.c: disabled checking 
+	if an uri exists for remote bookmarks. Added the hostname in the
+	bookmark name for remote bookmarks
+
 2007-02-06  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-document-loader.c: close file descriptor on
